<resources>
    <string name="app_name">MobileApp</string>

    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_btn">Login</string>
    <string name="login_signUp_btn">Sign up</string>
    <string name="login_invalidEmail_toast">E-mail entered is invalid</string>
    <string name="login_invalidPassword_toast">Password entered is invalid</string>
    <string name="login_empty_toast">E-mail/password cannot be empty</string>
    <string name="login_loginFail_toast">Failed to login</string>


    <string name="register_email_hint">E-mail</string>
    <string name="register_password_hint">Password</string>
    <string name="register_passwordConfirm_hint">Confirm password</string>
    <string name="register_signUp_btn">Sign up</string>
    <string name="register_cancel_btn">Cancel</string>
    <string name="register_passwordNoMatch_toast">Passwords do not match</string>
    <string name="register_emailExists_toast">E-mail already used</string>
    <string name="register_invalidEmail_toast">Invaild e-mail</string>
    <string name="register_invalidPassword_toast">Password must be 6 &#8211; 20 characters long</string>
    <string name="register_accountCreateFail_toast">Failed to register account</string>

    <string name="draw_sendFail_toast">Drawing did not send</string>
    <string name="draw_sendSuc_toast">Drawing has been successfully sent</string>
    <string name="draw_clear_toast">Clear</string>
    <string name="draw_saveSd_toast">Image has been saved to the SD card</string>

    <string name="send_send_btn">Send</string>
    <string name="send_cancel_btn">Cancel</string>

    <string name="main_menu">Main menu</string>

    <string name="your_previous_message">Your previous message</string>
    <string name="open_message">Open message</string>
    <string name="go_to_canvas">Go to canvas</string>
    <string name="logout_button_text">Logout</string>

    <string name="get_contacts_button_text">Contacts</string>

    <string name="notification_name">New Image Received!</string>
    <string name="notification_msg">Tap here to see new image!</string>
</resources>
