<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_landing_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.csci4100u.jasdeep_melvin.mobileapp.Draw"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/landing_page_layout">



        <TextView
            android:text="@string/main_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/welcome_text" />

        <Button
            android:text="@string/open_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/open_message"/>

        <Button
            android:text="@string/go_to_canvas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/open_canvas_button"
            />

        <Button
            android:text="@string/logout_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logout_button" />
        <Button
            android:text="@string/get_contacts_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/get_contact_button" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/contact_list_view"
                android:clickable="true"
                android:contextClickable="true"
                android:isScrollContainer="true" />

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
